fix: Note editor icon spacing

--- a/app/assets/stylesheets/_notes.scss
+++ b/app/assets/stylesheets/_notes.scss
@@ -139,7 +139,8 @@ notes-view {
       align-items: center;
       justify-content: space-between;
       padding: 0.9rem;
-      padding-right: 0.5rem;
+      padding-right: 0.75rem;
+      margin-right: 0;
     }
 
     .meta {
